<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="zxing_app_name">Barcode Scanner</string>
    <string name="zxing_button_ok">OK</string>
    <string name="zxing_msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="zxing_msg_default_status">Place a barcode inside the viewfinder rectangle to scan it.</string>
    <string name="accept_text">Accept</string>
    <string name="app_name">StudyMate</string>
    <string name="btn_done_questions">Done</string>
    <string name="concede_btn">Concede</string>
    <string name="consent_declined_msg">"We are sad that you don't want to take part in our study…"</string>
    <string name="decline_text">Decline</string>
    <string name="desc_concede_task">Concede Task</string>
    <string name="desc_finished_task">Finished Task</string>
    <string name="desc_help_task">Help Task</string>
    <string name="desc_start_task">Start Task</string>

    <string name="enter_participant_id">Participant id:</string>
    <string name="enter_current_rep">Current repetition:</string>

    <string name="finish_notification">Finished Task</string>
    <string name="go_back_btn">Go Back</string>
    <string name="help_notification">Help</string>
    <string name="placeholder">Oops</string>
    <string name="running_btn">Running…</string>
    <string name="setup_accessibility_done">Accessibility services are activated</string>
    <string name="setup_accessibility_fail">Accessibility services need to be activated</string>
    <string name="setup_accessibility_hint_btn">Open Settings</string>
    <string name="setup_accessibility_hint_txt">Please activate the StudyMate Accessibility Service. Go to Settings -> Accessibility -> StudyMate -> Enable it there</string>
    <string name="setup_accessibility_load">Checking for accessibility services</string>
    <string name="setup_app_done">App is installed</string>
    <string name="setup_app_fail">App(s) are not installed</string>
    <string name="setup_app_hint_btn">Open Play Store</string>
    <string name="setup_app_hint_txt">Please install missing apps!</string>
    <string name="setup_app_load">Searching for app on your device</string>
    <string name="setup_experiment_done">Experiment loaded!</string>
    <string name="setup_experiment_fail">"Couldn't load experiment!"</string>
    <string name="setup_experiment_hint_btn">Open Settings</string>
    <string name="setup_experiment_hint_txt">Experiment not found! Are you sure you have internet access? Otherwise turn to your study instructor!</string>
    <string name="setup_experiment_load">Loading experiment</string>
    <string name="setup_participant_done">Participant info is loaded!</string>
    <string name="setup_participant_fail">"Participant info couldn't be loaded"</string>
    <string name="setup_participant_load">Loading participant info..</string>
    <string name="setup_qrcode_done">Valid Qr Code!</string>
    <string name="setup_qrcode_fail">Wrong Qr Code</string>
    <string name="setup_qrcode_hint_btn">Scan another QR Code</string>
    <string name="setup_qrcode_hint_txt">"You didn't scan a StudyMate QR code. Please be sure to scan the QR code provided by the study instructor."</string>
    <string name="setup_qrcode_load">Qr Code is checked..</string>
    <string name="start_btn">Start</string>
    <string name="upload_already">%1$d were already uploaded.</string>
    <string name="upload_cur_state">This device hosts %1$d videos for this experiment.</string>
    <string name="upload_done">Upload Done!</string>
    <string name="upload_pending">%1$d are being uploaded.</string>
    <string name="use_app_txt">You will use the app</string>
</resources>
