<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_qrcode"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/not_done"
        android:text="@string/setup_qrcode_load"
        android:textAppearance="?android:textAppearanceLarge"
        android:visibility="visible" />

    <TextView
        android:id="@+id/txt_experiment"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/not_done"
        android:text="@string/setup_experiment_load"
        android:textAppearance="?android:textAppearanceLarge"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/txt_participant"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/not_done"
        android:text="@string/setup_participant_load"
        android:textAppearance="?android:textAppearanceLarge"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/txt_app"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16.0dip"
        android:drawableLeft="@drawable/not_done"
        android:text="@string/setup_app_load"
        android:textAppearance="?android:textAppearanceLarge"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/txt_accessibility"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/not_done"
        android:text="@string/setup_accessibility_load"
        android:textAppearance="?android:textAppearanceLarge"
        android:visibility="invisible" />

    <RelativeLayout
        android:id="@+id/container_setup_hint"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30.0dip"
        android:visibility="invisible">

        <TextView
            android:id="@+id/txt_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="s"
            android:textAppearance="?android:textAppearanceLarge" />

        <Button
            android:id="@+id/btn_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/txt_hint"
            android:layout_gravity="center_horizontal"
            android:text="Scan another QR Code" />

        <Button
            android:id="@+id/btn_retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/btn_hint"
            android:text="Load Again" />
    </RelativeLayout>
</LinearLayout>